using static Chess.Color;

namespace Chess {
    public enum Color {
        White, Black
    }

}