namespace Chess {
    public enum PieceType {
        Pawn, Knight, Bishop, Rook, Queen, King
    }

}